@@ -151,9 +151,15 @@ S3method("grobWidth", "grob")
 S3method("grobWidth", "gList")
 S3method("grobWidth", "gPath")
 S3method("grobWidth", "default")
+S3method("heightDetails", "arrows")
+S3method("heightDetails", "circle")
 S3method("heightDetails", "default")
 S3method("heightDetails", "frame")
+S3method("heightDetails", "lines")
+S3method("heightDetails", "points")
+S3method("heightDetails", "polygon")
 S3method("heightDetails", "rect")
+S3method("heightDetails", "segments")
 S3method("heightDetails", "text")
 #S3method("height.details", "viewport")
 S3method("postDraw", "grob")
@@ -166,14 +172,25 @@ S3method("record", "grob")
 S3method("record", "viewport")
 S3method("record", "vpPath")
 S3method("validDetails", "arrows")
+S3method("validDetails", "circle")
 S3method("validDetails", "grob")
 S3method("validDetails", "lines")
 S3method("validDetails", "line.to")
 S3method("validDetails", "move.to")
+S3method("validDetails", "polygon")
+S3method("validDetails", "points")
+S3method("validDetails", "rect")
 S3method("validDetails", "segments")
+S3method("validDetails", "text")
+S3method("widthDetails", "arrows")
+S3method("widthDetails", "circle")
 S3method("widthDetails", "default")
 S3method("widthDetails", "frame")
-#S3method("width.details", "rect")
+S3method("widthDetails", "lines")
+S3method("widthDetails", "points")
+S3method("widthDetails", "polygon")
+S3method("widthDetails", "rect")
+S3method("widthDetails", "segments")
 S3method("widthDetails", "text")
 #S3method("width.details", "viewport")
 
